Some new files added

--- a/shopping cart/index.html
+++ b/shopping cart/index.html
@@ -18,9 +18,7 @@
             </div>
         </header>
 
-        <div class="list">
-          
-        </div>
+        <div class="list">     </div>
     </div>
     <div class="card">
         <h1>Card</h1>
